--- a/gb/18/9/26/n10741821.md
+++ b/gb/18/9/26/n10741821.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hpuk2064/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hpuk2064/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hpuk2064/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hpuk2064/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hpuk2064/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hpuk2064/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hpuk2064/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hpuk2064/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/hpuk2064/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hpuk2064/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hpuk2064/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hpuk2064/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hpuk2064/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>不依赖胃药 中医教你自然解胃痛</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/09/Stomachache-600x400.jpg" />
 <h6>胃痛不依赖胃药如何缓解？中医师教你养胃方法。（Shutterstock/大纪元制图）
 </h6>
 <hr>
-<p>胃或十二指肠病的表现是“<ahref="https://github.com/hpuk2064/djy/blob/master/gb/tag/%E8%83%83%E7%97%9B.md#1">胃痛</a>”。胃痛，大致上指的是心窝以下肚脐以上的疼痛，中医叫心下痛或胃脘痛。胃痛的表现形式，有可能是胃痛、胃胀、烧心等。</p>
-<p>以前，在还没有大量使用肠胃内视镜直接看病的时代，许多医生以痛的表现来分析<ahref="https://github.com/hpuk2064/djy/blob/master/gb/tag/%E8%83%83%E7%97%9B.md#1">胃痛</a>属于胃或十二指肠的病情。多数的胃溃疡表现是“饿痛饱痛”，多数的十二指肠溃疡表现症状是“饿痛饱胀”。</p>
+<p>胃或十二指肠病的表现是“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%83%83%E7%97%9B.md#1">胃痛</a>”。胃痛，大致上指的是心窝以下肚脐以上的疼痛，中医叫心下痛或胃脘痛。胃痛的表现形式，有可能是胃痛、胃胀、烧心等。</p>
+<p>以前，在还没有大量使用肠胃内视镜直接看病的时代，许多医生以痛的表现来分析<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%83%83%E7%97%9B.md#1">胃痛</a>属于胃或十二指肠的病情。多数的胃溃疡表现是“饿痛饱痛”，多数的十二指肠溃疡表现症状是“饿痛饱胀”。</p>
 <h2><span style="color: #008000;">一胃痛就吞药，容易对身体造成伤害</span></h2>
 <p>在西医看来，胃痛的原因最常见的是这三种：胃食道逆流、溃疡性和非溃疡性的消化不良。根据这几个胃痛的原因，大部分西医师是使用止痛剂、制酸剂、胃壁包覆剂、神经阻断剂、胃酸分泌腺的阻断剂、助消化剂??等等来解除症状。</p>
 <p>这当中，最表面的治法就是用止痛剂。虽然痛是止了，可造成疼痛的病因却完全没有照顾到，任其发展。也有医师认为就是胃酸过多，使用碱性的小苏打或制酸剂等以中和那个强酸性，而达到止痛的目的。但生理学的实验却发现，它们可能引起胃的“生理性反弹”，分泌更大量的胃酸，形成了得不偿失的后果。</p>
@@ -20,79 +20,84 @@
 <p>中医的治病方法，可以治标也可以治本，不同的方式可以在不同的情况下运用。针灸也是一样。</p>
 <p>治标，就是立即的解痛。</p>
 <p>有三个治胃痛的穴位：足三里穴、公孙穴、内关穴。胃痛属于足阳明胃经，所以可以用足三里穴直接止痛，大部分的情况也能收到治本的效果。如果在贲门疼痛，就可以用冲脉的会穴公孙穴、阴维脉的会穴内关穴治疗，因为它们可以治疗胃、心、胸的所有病，就算不知道究竟是心脏或胃的病，只要是发生在贲门附近和心脏部位，都可以用它解除疼痛；再加上足三里穴的刺激，几乎都能治好，可能以后就不再发生这种病痛。</p>
-<figure id="attachment_10742173" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/09/neiguan-point.jpg"><img class="size-large wp-image-10742173" src="https://i.epochtimes.com/assets/uploads/2018/09/neiguan-point-600x530.jpg" alt="" width="600" b="530" /></a><figcaption class="wp-caption-text">中医止胃痛的三个穴位：足三里穴、公孙穴和内关穴。（温嫔容医师提供）</figcaption></figure>
+<figure id="attachment_10742173" aria-describedby="caption-attachment-10742173" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/09/neiguan-point.jpg"><img class="size-large wp-image-10742173" src="https://i.epochtimes.com/assets/uploads/2018/09/neiguan-point-600x530.jpg" alt="" width="600" b="530" /></a><figcaption id="caption-attachment-10742173" class="wp-caption-text">中医止胃痛的三个穴位：足三里穴、公孙穴和内关穴。（温嫔容医师提供）</figcaption></figure>
 <p>但一个不会针灸医术的人，怎么办？按摩穴道呀！以上这三个穴位，按摩的时候是没有什么危险性的。疼痛时按摩它们，可以缓解病情，平时按摩它们也可以治好病情。并没有多少次或按多久的问题。</p>
 <p><strong>穴位位置如下：</strong></p>
 <p>足三里穴：膝眼下三吋，约四横指的距离，有一凹沟处。</p>
 <p>公孙穴：大脚趾本节向后一吋，内踝前凹陷中；也就是脚内侧第一跖骨基底部的前下方。</p>
 <p>内关穴：手放于桌面，手掌向上，内关穴就在两筋之间，从手腕横纹正中往手肘方向二吋、约三横指距离处。</p>
 <p>如果知道这个人的胃痛本质，是由于精神紧张发怒等等方面引起的，中医在理论上的认识，就是肝气盛，那就依照紧张发怒等病的根本来按摩治疗，例如按摩太冲穴、阳陵泉穴等等；如果知道胃痛是心因性的，也就是由于心理因素而发生的，可以按摩神门、三阴交等穴，更能解决根本的胃痛问题。</p>
-<h2><span style="color: #008000;">2个健脾养胃的<ahref="https://github.com/hpuk2064/djy/blob/master/gb/tag/%E8%8D%AF%E8%86%B3.md#1">药膳</a></span></h2>
+<h2><span style="color: #008000;">2个健脾养胃的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8D%AF%E8%86%B3.md#1">药膳</a></span></h2>
 <p>常常胃痛的人，应该少吃冰冷食物、辛辣食物、甜食、不易消化的食物等等。</p>
-<p>推荐两个健脾养胃的<ahref="https://github.com/hpuk2064/djy/blob/master/gb/tag/%E8%8D%AF%E8%86%B3.md#1">药膳</a>：</p>
+<p>推荐两个健脾养胃的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8D%AF%E8%86%B3.md#1">药膳</a>：</p>
 <p><span style="color: #800000;"><strong>● 莲子猪肚汤（胃寒）</strong></span></p>
-<figure id="attachment_10742237" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/09/1-115.jpg"><img class="size-large wp-image-10742237" src="https://i.epochtimes.com/assets/uploads/2018/09/1-115-600x126.jpg" alt="" width="600" b="126" /></a><figcaption class="wp-caption-text">改善胃寒的药膳配方。（Shutterstock/大纪元合成）</figcaption></figure>
+<figure id="attachment_10742237" aria-describedby="caption-attachment-10742237" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/09/1-115.jpg"><img class="size-large wp-image-10742237" src="https://i.epochtimes.com/assets/uploads/2018/09/1-115-600x126.jpg" alt="" width="600" b="126" /></a><figcaption id="caption-attachment-10742237" class="wp-caption-text">改善胃寒的药膳配方。（Shutterstock/大纪元合成）</figcaption></figure>
 <p>做法：莲子大约1两，猪肚1个，少许胡椒，煮汤食用。</p>
 <p>莲子能健脾、胡椒温胃，猪肚就是猪的胃，以形补形。胃寒的人吃这个药膳，有温暖的效果。</p>
 <p><span style="color: #800000;"><strong>● 山楂麦芽粥（消化不良、胃胀）</strong></span></p>
-<figure id="attachment_10742242" style="width: 600px" class="wp-caption aligncenter"><img class="wp-image-10742242 size-large" src="https://i.epochtimes.com/assets/uploads/2018/09/2-84-600x126.jpg" alt="" width="600" b="126" /><figcaption class="wp-caption-text">改善消化不良、胃胀的药膳配方。（Shutterstock/大纪元合成）</figcaption></figure>
+<figure id="attachment_10742242" aria-describedby="caption-attachment-10742242" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2018/09/2-84-600x126.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-10742242 size-large" src="https://i.epochtimes.com/assets/uploads/2018/09/2-84-600x126.jpg" alt="" width="600" b="126" /></a><figcaption id="caption-attachment-10742242" class="wp-caption-text">改善消化不良、胃胀的药膳配方。（Shutterstock/大纪元合成）</figcaption></figure>
 <p>做法：山楂15克，麦芽15克，粳米100克，煮粥食用。</p>
 <p>山楂消肉食积，麦芽消榖积，粳米煮粥健脾。合在一起煮粥吃，能健脾开胃、消食化积，对消化不良所致胃腹胀满、食欲不振有帮助。</p>
 <h2><span style="color: #008000;">经常胃痛的人，平时如何保养？</span></h2>
 <p>中医讲求的是“不治已病治未病”，曾经发生胃痛的人或者有可能将要发生胃痛的人，在没有疼痛之前就应该调适到根本不发生这个病痛。</p>
 <p>平时的保养应该是最为重要的。那么，怎样保养呢？</p>
-<p>胃痛，常常不只是胃本身的问题。胃酸，引起胃平滑肌收缩，平滑肌收缩过度就是胃痉挛，就感觉疼痛。胃壁细胞分泌胃酸受神经的影响、以致于胃平滑肌痉挛收缩??其实它们都和精神神经有关。精神上的平和，是最佳状态。它虽然不是直接<ahref="https://github.com/hpuk2064/djy/blob/master/gb/tag/%E7%BC%93%E8%A7%A3%E8%83%83%E7%97%9B.md#1">缓解胃痛</a>，可它却在胃酸分泌当中扮演很重要的角色。情绪和精神平和，胃酸会正常量的分泌。胃酸分泌太多，容易引发十二指肠溃疡；胃酸分泌太少，容易引致胃溃疡。</p>
+<p>胃痛，常常不只是胃本身的问题。胃酸，引起胃平滑肌收缩，平滑肌收缩过度就是胃痉挛，就感觉疼痛。胃壁细胞分泌胃酸受神经的影响、以致于胃平滑肌痉挛收缩??其实它们都和精神神经有关。精神上的平和，是最佳状态。它虽然不是直接<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BC%93%E8%A7%A3%E8%83%83%E7%97%9B.md#1">缓解胃痛</a>，可它却在胃酸分泌当中扮演很重要的角色。情绪和精神平和，胃酸会正常量的分泌。胃酸分泌太多，容易引发十二指肠溃疡；胃酸分泌太少，容易引致胃溃疡。</p>
 <p>寒热调适、五味调适、七情不过度、节制嗜欲??，就是《黄帝内经素问·上古天真论》所云的“虚邪贼风，避之有时，恬淡虚无，真气从之，精神内守，病安从来”。</p>
 <p>尽量选择自然的食物，适合于自己肠胃消化的食物。现代医生或营养师所强调的营养，不一定是每个人都适合的。</p>
 <p>临床上，常常见到听从营养师建议后，为了多得到一点蛋白质营养，喝过多的牛奶或高蛋白营养素或氨素、吃过多的乳酪、坚果、牛肉的病人，肠胃撑到鼓胀而疼痛不能忍的。他们在改变饮食习惯之后，反而状况改善了。另外提一下，笔者曾经看到病人因为多吃了钙和维他命D补充剂，全身颤抖和骨质疏松了的。</p>
 <h2><span style="color: #008000;">什么情况下的胃痛，需要看医师？</span></h2>
 <p>当使用各种方法，包括饮食、按摩、情绪调适都不能奏效的时候，那可能并非自己能力可以治疗的，当然需要看医师。</p>
 <p>大部分中医师看诊时，会用四诊合参的方式，找出病的形成原因。在病因方面，可能分析它由于六气当中的寒气所致？湿气所致？也会分析它是由于七情的怒气所致？忧思所致？悲伤所致？或者是由于饮食不洁、饮食过多过少所致？从这外因天气、内因情绪、不内外因非天气非情绪等病因分析而得出结论，治疗起来就真的能够标本兼治，最后能把病治好。</p>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/hpuk2064/djy/blob/master/gb/18/8/31/n10681944.md#1" target="_blank" rel="noopener noreferrer">这些水果、茶饮别在饭前吃！中医4招养好胃</a></span></h2>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/hpuk2064/djy/blob/master/gb/18/6/11/n10474971.md#1" target="_blank" rel="noopener noreferrer">腹部1个穴位是人体药物箱 常按改善肠胃功能</a></span></h2>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/hpuk2064/djy/blob/master/gb/18/7/13/n10561780.md#1" target="_blank" rel="noopener noreferrer">口苦、肝火大怎么办？2种食物可解</a></span></h2>
-<p>责任编辑：李清风</p>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/31/n10681944.md#1" target="_blank" rel="noopener noreferrer">这些水果、茶饮别在饭前吃！中医4招养好胃</a></span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/11/n10474971.md#1" target="_blank" rel="noopener noreferrer">腹部1个穴位是人体药物箱 常按改善肠胃功能</a></span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/18/7/13/n10561780.md#1" target="_blank" rel="noopener noreferrer">口苦、肝火大怎么办？2种食物可解</a></span></h2>
+<p>责任编辑：李清风◇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/15/11/10/n4570585.md#1">四川老人两次重伤不治痊愈</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/3/11/n10209099.md#1">热量低又护肠胃  超好做的银丝鲫鱼汤</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/5/29/n10438556.md#1">韭菜常吃养肝肾、煎蛋防胃痛 能做28件事</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/6/11/n10473939.md#1">受化学毒剂侵害 越战老兵绝望中见证奇迹</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/6/16/n10490242.md#1">为什么吃粽子会胀气？2种茶饮能消胀</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/8/23/n10661281.md#1">鹅有神奇食疗功效 但这些人必须慎吃</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/2/9/n11856735.md#1">上消化道出血怎么办？3味药膳保养</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/19/12/30/n11756229.md#1">胃不舒服，可能是肝病？如何判断</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/19/10/19/n11599297.md#1">足三里穴消腹胀有奇效！经常拍打保健肠胃</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/19/10/15/n11590701.md#1">经常胃痛、胃胀？元凶可能是幽门螺旋杆菌</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/11/10/n4570585.md#1">四川老人两次重伤不治痊愈</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/11/n10209099.md#1">热量低又护肠胃  超好做的银丝鲫鱼汤</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/29/n10438556.md#1">韭菜常吃养肝肾、煎蛋防胃痛 能做28件事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/11/n10473939.md#1">受化学毒剂侵害 越战老兵绝望中见证奇迹</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/16/n10490242.md#1">为什么吃粽子会胀气？2种茶饮能消胀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/23/n10661281.md#1">鹅有神奇食疗功效 但这些人必须慎吃</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13679716.md#1">研究揭示肠道和大脑如何联系的机制</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/20/n13659771.md#1">火烧心、腹胀别轻忽 可能是危险胃病的警讯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/5/n13623193.md#1">消化是健康核心 阿育吠陀疗法排毒、逆转疾病</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/4/n13620732.md#1">胃不好吃什么？7类食物养胃</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/11/n10208093.md#1" target="_blank">古玉文：消灭私有制不是出路（下）</a></li><li><a href="https://github.com/hpuk2064/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280714.md#1" target="_blank">女裁缝的别样生意经</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/13/n12027648.md#1">大陆民企现状：工厂机器被砸 失业者人山人海</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/13/n12027860.md#1">【新闻看点】3000万人恐失业 北京遇4大挑战</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/13/n12027427.md#1">怎么测都不超37度 陆媒卧底测温枪交易群</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/13/n12027727.md#1">大陆口罩原料价格2天翻倍 业内人士揭黑幕</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/14/n12030965.md#1">Hakkasan上海店突宣布永久停业 退出中国</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/12/n12025294.md#1">不爽台湾被抹黑 洋女婿吴凤吁联署罢免谭德塞</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/13/n12025668.md#1">何妤玟惊曝年初离婚 自认不适合再当对方太太</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/14/n12031185.md#1">刘亦菲演花木兰 挪威三天票房仅874美元</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/13/n12027681.md#1">杨超越塞脏纸巾给助理 被批耍大牌没素质</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/14/n12029826.md#1">钮承泽性侵案 一审判4年徒刑</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/11/n12022064.md#1">归序《推背图》兑运卦象预言中共终局</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/13/n12027357.md#1">隔离带小孩好累 治疗师荐3游戏 孩子不再喊无聊</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/12/n12024552.md#1">古今传奇：天门为何人开启</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/15/n12032435.md#1">不经意的照片 让菲律宾女孩从乞丐变网红</a></li>
-<li><a href="https://github.com/hpuk2064/djy/blob/master/gb/20/4/13/n12026626.md#1">意男高音献唱“希望的音乐” 网上千万人看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hpuk2064/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hpuk2064/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/26/n10741821.htm">不依赖胃药 中医教你自然解胃痛</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/26/n10741821.htm">不依赖胃药 中医教你自然解胃痛</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hpuk2064/djy/blob/master/gb/18/9/26/n10741821.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hpuk2064/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hpuk2064/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hpuk2064/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hpuk2064/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hpuk2064/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/18/9/26/n10741821.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
